// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Wrapper correctly adds a card to the state 1`] = `
Object {
  "Done": Array [],
  "In progress": Array [],
  "To do": Array [
    Object {
      "column": "To do",
      "description": "Test card",
      "title": "Card One",
      "user": "example@example.com",
    },
  ],
}
`;

exports[`App Wrapper correctly changes card column in the state 1`] = `
Object {
  "Done": Array [
    Object {
      "column": "Done",
      "description": "Test card",
      "title": "Card One",
      "user": "example@example.com",
    },
  ],
  "In progress": Array [],
  "To do": Array [],
}
`;

exports[`App Wrapper correctly sorts cards in the state 1`] = `
Object {
  "Done": Array [],
  "In progress": Array [],
  "To do": Array [
    Object {
      "column": "To do",
      "description": "Test card",
      "title": "Card Two",
      "user": "example@example.com",
    },
    Object {
      "column": "To do",
      "description": "Test card",
      "title": "Card Three",
      "user": "example@example.com",
    },
    Object {
      "column": "To do",
      "description": "Test card",
      "title": "Card One",
      "user": "example@example.com",
    },
  ],
}
`;
